config/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ukf
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
            defaultMode: 420
        - name: shared-files
          emptyDir: {}
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: ukf-secret
      containers:
        - name: halvonik-php
          image: ppsdocker/halvonik-php:latest
          imagePullPolicy: Always
          command:
            - /usr/local/sbin/php-fpm
            - '--force-stderr'
            - '--nodaemonize'
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          resources:
            requests:
              memory: 200Mi
              cpu: "0.12"
            limits:
              memory: 300Mi
              cpu: "0.25"
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "cp -r /var/www/app/. /var/www/html" ]
        - name: nginx
          image: library/nginx:1.20.1
          imagePullPolicy: Always
          command:
            - /usr/sbin/nginx
            - '-g'
            - daemon off;
          lifecycle:
            preStop:
              exec:
                command:
                  - /usr/sbin/nginx
                  - '-s'
                  - quit
          resources:
            requests:
              memory: 200Mi
              cpu: "0.12"
            limits:
              memory: 300Mi
              cpu: "0.25"
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: shared-files
              mountPath: /var/www/html
